--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
                   />
                   <image
                     class="home__blob-img"
-                    x="12"
-                    y="18"
-                    href="assets/img/perfil.png"
+                    x="21"
+                    y="15"
+                    href="assets/img/profile.png"
                   />
                 </g>
               </svg>
@@ -139,7 +139,7 @@
               </h1>
               <h3 class="home__subtitle">Web Developer</h3>
               <p class="home__description">
-                I am a fresh graduate of Informatics Engineering.
+                I am a graduate of Informatics Engineering.
               </p>
               <a href="#contact" class="button button--flex">
                 Contact Me<i class="uil uil-message button__icon"></i>
@@ -162,14 +162,16 @@
         <h2 class="section__title">About Me</h2>
         <span class="section__subtitle">My Introduction</span>
         <div class="about__container container grid">
-          <img src="assets/img/about.jpg" alt="" class="about__img" />
+          <img src="assets/img/me.jpg" alt="" class="about__img" />
           <div class="about__data">
             <p class="about__description">
-              Hi! I am a Web Developer. I am a fresh graduate of Informatics
-              Engineering, STMIK Widya Pratama Pekalongan. I have work
-              internship experience in Bawaslu Pekalongan Regency as an IT
-              Support Specialist. Also, I have a passion in Web Developers and
-              Network Enginner. I am a person who likes to learn new things.
+              Hello, my name is Aji Prasetiyo. I'm a recent graduate with
+              bachelor degree in Informatics. I have previously worked for
+              Bawaslu Pekalongan as a Web Developer Intern and for PT Hablun
+              Citra Persada as a Network Engineer. <br> My qualifications above and
+              personality as someone who loves to learn something new make me a
+              strong candidate for this position. Hence, I'm looking forward to
+              hearing from you soon.
             </p>
 
             <div class="about__info">
@@ -869,25 +871,29 @@
             </div>
           </div>
 
-          <form action="" class="contact__form grid">
+          <form
+            name="submit-to-google-sheet"
+            action=""
+            class="contact__form grid"
+          >
             <div class="contact__inputs grid">
               <div class="contact__content">
-                <label for="" class="contact__label">Name</label>
-                <input type="text" class="contact__input" />
+                <label for="name" class="contact__label">Name</label>
+                <input type="text" class="contact__input" name="name" />
               </div>
               <div class="contact__content">
-                <label for="" class="contact__label">Email</label>
-                <input type="email" class="contact__input" />
+                <label for="email" class="contact__label">Email</label>
+                <input type="email" class="contact__input" name="email" />
               </div>
             </div>
             <div class="contact__content">
-              <label for="" class="contact__label">Project</label>
-              <input type="text" class="contact__input" />
+              <label for="subject" class="contact__label">Subject</label>
+              <input type="text" class="contact__input" name="subject" />
             </div>
             <div class="contact__content">
-              <label for="" class="contact__label">Message</label>
+              <label for="message" class="contact__label">Message</label>
               <textarea
-                name=""
+                name="message"
                 id=""
                 cols="0"
                 rows="7"
@@ -895,10 +901,24 @@
               ></textarea>
             </div>
             <div>
-              <a href="#" class="button button--flex">
+              <button
+                type="submit"
+                class="button button--flex"
+                onclick="Swal.fire({
+                  title: 'Thank you!',
+                  text: 'Your message has been sent',
+                  position: 'top-center',
+                  icon: 'success',
+                  showConfirmButton: false,
+                  timer: 2300
+                })"
+              >
+                Send Message<i class="uil uil-telegram-alt button__icon"></i>
+              </button>
+              <!-- <a href="#" class="button button--flex">
                 Send Message
                 <i class="uil uil-telegram-alt button__icon"></i>
-              </a>
+              </a> -->
             </div>
           </form>
         </div>
@@ -947,6 +967,28 @@
         </p>
       </div>
     </footer>
+
+    <!-- CONTACT FORM -->
+    <script>
+      const scriptURL =
+        "https://script.google.com/macros/s/AKfycbzZe3NbbmLnxqB0nMY96fMMIWr_7N1FkFlBL5zJtLf2tB2J-X2qAV7nON-o5ZygVPXqaQ/exec";
+      const form = document.forms["submit-to-google-sheet"];
+
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        fetch(scriptURL, { method: "POST", body: new FormData(form) })
+          .then((response) => {
+            // RESET FORM
+            form.reset();
+
+            console.log("Success!", response);
+          })
+          .catch((error) => console.error("Error!", error.message));
+      });
+    </script>
+
+    <!-- SWEETALERT -->
+    <script src="assets/js/dist/sweetalert2.all.min.js"></script>
 
     <!--==================== SCROLL TOP ====================-->
     <a href="#" class="scrollup" id="scroll-up">
