merubah tampilan services

--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
               Hello, my name is Aji Prasetiyo. I'm a recent graduate with
               bachelor degree in Informatics. I have previously worked for
               Bawaslu Pekalongan as a Web Developer Intern and for PT Hablun
-              Citra Persada as a Network Engineer. <br> My qualifications above and
-              personality as someone who loves to learn something new make me a
-              strong candidate for this position. Hence, I'm looking forward to
-              hearing from you soon.
+              Citra Persada as a Network Engineer. <br />
+              My qualifications above and personality as someone who loves to
+              learn something new make me a strong candidate for this position.
+              Hence, I'm looking forward to hearing from you soon.
             </p>
 
             <div class="about__info">
@@ -430,7 +430,7 @@
                   >
                   <div class="qualification__detail">
                     I did an internship at Pekalongan Regency Bawaslu. There
-                    improve the appearance of an existing website .
+                    improve the appearance of an existing website.
                   </div>
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
@@ -521,19 +521,15 @@
                 <ul class="services__modal-services grid">
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Lorem ipsum dolor sit amet consectetur</p>
+                    <p><b>Frontend</b>: HTML, CSS, JavaScript</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <p><b> Backend</b>: Java, SQL, PHP</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Lorem ipsum dolor sit amet</p>
-                  </li>
-                  <li class="services__modal-service">
-                    <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <p><b> Framework</b>: CodeIgniter, Laravel</p>
                   </li>
                 </ul>
               </div>
@@ -545,7 +541,7 @@
               <i class="uil uil-server-network services__icon"></i>
               <h3 class="services__title">
                 Network <br />
-                enginner
+                Enginner
               </h3>
             </div>
             <span
@@ -556,32 +552,21 @@
             </span>
             <div class="services__modal">
               <div class="services__modal-content">
-                <h4 class="services__modal-title">Network <br />enginner</h4>
+                <h4 class="services__modal-title">Network <br />Enginner</h4>
                 <i class="uil uil-times services__modal-close"></i>
 
                 <ul class="services__modal-services grid">
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Dolor, quibusdam.
-                    </p>
+                    <p><b> Router</b>: Cisco, Mikrotik</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <p><b> Server</b>: Linux, Windows</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    </p>
-                  </li>
-                  <li class="services__modal-service">
-                    <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    </p>
+                    <p><b> Routing Protocols</b>: OSPF, EIGRP, RIP, TCP/IP</p>
                   </li>
                 </ul>
               </div>
@@ -593,7 +578,7 @@
               <i class="uil uil-cloud-computing services__icon"></i>
               <h3 class="services__title">
                 Cloud <br />
-                computing
+                Computing
               </h3>
             </div>
             <span
@@ -610,19 +595,11 @@
                 <ul class="services__modal-services grid">
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Lorem ipsum dolor sit amet consectetur</p>
+                    <p>Virtual Private Server</p>
                   </li>
                   <li class="services__modal-service">
                     <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Lorem ipsum dolor sit amet</p>
-                  </li>
-                  <li class="services__modal-service">
-                    <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Lorem ipsum dolor sit</p>
-                  </li>
-                  <li class="services__modal-service">
-                    <i class="uil uil-check-circle services__modal-icon"></i>
-                    <p>Lorem ipsum dolor sit amet</p>
+                    <p>Hosting</p>
                   </li>
                 </ul>
               </div>
