--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header" id="header">
       <nav class="nav container">
         <a href="#" class="nav__logo">
-          APiDEV<i class="uil uil-fire header__icon"></i>
+          Mavicen<i class="uil uil-fire header__icon"></i>
         </a>
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list grid">
@@ -93,10 +93,10 @@
                 <i class="uil uil-github-alt"></i>
               </a>
               <a
-                href="https://api.whatsapp.com/send?phone=6282324039369"
+                href="https://dribbble.com/mavicen"
                 target="_BLANK"
                 class="home__social-icon"
-                ><i class="uil uil-whatsapp"></i>
+                ><i class="uil uil-dribbble"></i>
               </a>
             </div>
 
@@ -138,9 +138,12 @@
                 Aji Prasetiyo
               </h1>
               <h3 class="home__subtitle">Web Developer</h3>
-              <p class="home__description">
+              <!-- <p class="home__description">
                 I am a graduate of Informatics Engineering.
-              </p>
+              </p> -->
+              <a href="#about" class="button button--flex">
+                About Me<i class="uil uil-angle-double-down button__icon"></i>
+              </a>
               <a href="#contact" class="button button--flex">
                 Contact Me<i class="uil uil-message button__icon"></i>
               </a>
@@ -623,7 +626,7 @@
                 class="portfolio__img"
               />
               <div class="portfolio__data">
-                <h3 class="portfolio__title">Web Mygis</h3>
+                <h3 class="portfolio__title">Sistem Pemetaan Industri Berbasis MAPS</h3>
                 <p class="portfolio__description">
                   Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                   Atque, perspiciatis. Sit esse adipisci eaque facilis?
@@ -646,7 +649,7 @@
                 class="portfolio__img"
               />
               <div class="portfolio__data">
-                <h3 class="portfolio__title">Gas LPG Batang</h3>
+                <h3 class="portfolio__title">Pemetan Agen Gas LPG</h3>
                 <p class="portfolio__description">
                   Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                   Atque, perspiciatis. Sit esse adipisci eaque facilis?
@@ -704,7 +707,7 @@
             <div class="project_data">
               <h2 class="project__title">You have a new project</h2>
               <p class="project__description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Contact me now and i will be happy to help you.
               </p>
               <a href="#contact" class="button button--flex button--white">
                 Contact me
@@ -717,105 +720,6 @@
       </section>
 
       <!--==================== TESTIMONIAL ====================-->
-      <section class="testimonial section">
-        <h2 class="section__title">Testimonial</h2>
-        <span class="section__subtitle">My client saying</span>
-        <div class="testimonial__container container swiper-container">
-          <div class="swiper-wrapper">
-            <!--==================== TESTIMONIAL 1====================-->
-            <div class="testimonial__content swiper-slide">
-              <div class="testimonial__data">
-                <div class="testimonial__header">
-                  <img
-                    src="assets/img/testimonial1.jpg"
-                    alt=""
-                    class="testimonial__img"
-                  />
-                  <div>
-                    <h3 class="testimonial__name">Sara Smith</h3>
-                    <span class="testimonial__client">Client</span>
-                  </div>
-                </div>
-
-                <div>
-                  <i class="uil uil-star testimonial__icon-star"></i>
-                  <i class="uil uil-star testimonial__icon-star"></i>
-                  <i class="uil uil-star testimonial__icon-star"></i>
-                  <i class="uil uil-star testimonial__icon-star"></i>
-                  <i class="uil uil-star testimonial__icon-star"></i>
-                </div>
-              </div>
-
-              <p class="testimonial__description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
-                velit minus natus modi sequi sit fuga necessitatibus atque
-                dignissimos molestiae?
-              </p>
-            </div>
-            <!--==================== TESTIMONIAL 2====================-->
-            <div class="testimonial__content swiper-slide">
-              <div class="testimonial__data">
-                <div class="testimonial__header">
-                  <img
-                    src="assets/img/testimonial2.jpg"
-                    alt=""
-                    class="testimonial__img"
-                  />
-                  <div>
-                    <h3 class="testimonial__name">Alex John</h3>
-                    <span class="testimonial__client">Client</span>
-                  </div>
-                </div>
-
-                <div>
-                  <i class="uil uil-star testimonial__icon-star"></i>
-                  <i class="uil uil-star testimonial__icon-star"></i>
-                  <i class="uil uil-star testimonial__icon-star"></i>
-                  <i class="uil uil-star testimonial__icon-star"></i>
-                  <i class="uil uil-star testimonial__icon-star"></i>
-                </div>
-              </div>
-
-              <p class="testimonial__description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Ducimus, libero.
-              </p>
-            </div>
-            <!--==================== TESTIMONIAL 3====================-->
-            <div class="testimonial__content swiper-slide">
-              <div class="testimonial__data">
-                <div class="testimonial__header">
-                  <img
-                    src="assets/img/testimonial3.jpg"
-                    alt=""
-                    class="testimonial__img"
-                  />
-                  <div>
-                    <h3 class="testimonial__name">Alexanderia</h3>
-                    <span class="testimonial__client">Client</span>
-                  </div>
-                </div>
-
-                <div>
-                  <i class="uil uil-star testimonial__icon-star"></i>
-                  <i class="uil uil-star testimonial__icon-star"></i>
-                  <i class="uil uil-star testimonial__icon-star"></i>
-                  <i class="uil uil-star testimonial__icon-star"></i>
-                  <i class="uil uil-star testimonial__icon-star"></i>
-                </div>
-              </div>
-
-              <p class="testimonial__description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
-                velit minus natus modi sequi sit fuga necessitatibus atque
-                dignissimos molestiae?
-              </p>
-            </div>
-          </div>
-          <!-- Add pagination -->
-          <div class="swiper-pagination swiper-pagination-testimonial"></div>
-        </div>
-      </section>
 
       <!--==================== CONTACT ME ====================-->
       <section class="contact section" id="contact">
@@ -843,7 +747,7 @@
               <i class="uil uil-map-marker contact__icon"></i>
               <div>
                 <h3 class="conctact__title">Location</h3>
-                <span class="contact__subtitle">Pekalongan, 51162</span>
+                <span class="contact__subtitle">Jl. Kaliwadas Pekalongan, 51162</span>
               </div>
             </div>
           </div>
@@ -907,7 +811,7 @@
       <div class="footer__bg">
         <div class="footer__container container grid">
           <div>
-            <h1 class="footer__title">APiDev<i class="uil uil-fire"></i></h1>
+            <h1 class="footer__title">Mavicen<i class="uil uil-fire"></i></h1>
             <span class="footer__subtitle">Web Developer</span>
           </div>
           <ul class="footer__links">
@@ -940,7 +844,7 @@
           </div>
         </div>
         <p class="footer__copy">
-          &#169;2022 APiDev.github.io | All right reserved
+          &#169;2022 ajiprast.github.io | All right reserved
         </p>
       </div>
     </footer>
