--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
             <!--==================== PORTFOLIO 1 ====================-->
             <div class="portfolio__content grid swiper-slide">
               <img
-                src="assets/img/portfolio1.jpg"
+                src="assets/img/port1.png"
                 alt=""
                 class="portfolio__img"
               />
@@ -644,7 +644,7 @@
             <!--==================== PORTFOLIO 2 ====================-->
             <div class="portfolio__content grid swiper-slide">
               <img
-                src="assets/img/portfolio2.jpg"
+                src="assets/img/port2.png"
                 alt=""
                 class="portfolio__img"
               />
