--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header" id="header">
       <nav class="nav container">
         <a href="#" class="nav__logo">
-          Mavicen<i class="uil uil-fire header__icon"></i>
+          Ajiprast<i class="uil uil-fire header__icon"></i>
         </a>
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list grid">
@@ -811,7 +811,7 @@
       <div class="footer__bg">
         <div class="footer__container container grid">
           <div>
-            <h1 class="footer__title">Mavicen<i class="uil uil-fire"></i></h1>
+            <h1 class="footer__title">Ajiprast<i class="uil uil-fire"></i></h1>
             <span class="footer__subtitle">Web Developer</span>
           </div>
           <ul class="footer__links">
